# geoapps-starter-2425-v2-MichalDyl2

./: 404.html  conda-lock-dev.yml  conda-lock.yml  env-dev.yml  env.yml  index.html
docs/zaj01/: czas.py  skrypt1.py  skrypt3.py  skrypt4.py  skrypt5.py
docs/zaj02/: funkcje2.py  funkcje3.py  funkcje4_raport.py
docs/zaj03/: ambulance.py  operations.py  station.py
docs/zaj04/: licznik_global.py  licznik_klasa.py  pyproject.toml
docs/zaj05/: czas_dekorator.py
docs/zaj06/: mamba_condalock.md  srodowiska_wirtualne.md
search/: search_index.json
zaj0/srod-lok/: index.html
zaj01/: przestrzen_nazw.py  skrypt2.py  teksty_p.json
zaj01/git/: index.html
zaj01/instrukcje_petle/: index.html
zaj01/moduly_przestrzenie/: index.html
zaj01/niespodziewane/: index.html
zaj01/praca_z_plikami/: index.html
zaj01/typy_wbudowane/: index.html
zaj01/zadania_sprawdzajace/: index.html
zaj02/: funkcje.py  funkcje_anonimowe_lambda.py
zaj02/funkcje/: index.html
zaj02/generatory/: index.html
zaj02/iteratory/: index.html
zaj02/lambda/: index.html
zaj02/listy_skladane/: index.html
zaj02/petle/: index.html
zaj02/przypisania/: index.html
zaj03/: operations.py
zaj03/abstrakcyjne/: index.html
zaj03/dziedziczenie/: index.html
zaj03/introspekcja/: index.html
zaj03/klasy/: index.html
zaj03/metody/: index.html
zaj03/obiektowe_poco/: index.html
zaj03/przeciazanie/: index.html
zaj03/przyklad/: index.html
zaj04/: licznik_atrybuty.py  licznik_nonlocal.py  potegowanie.py  run_geoapps.py
zaj05/: kino_wyjatki.py  menedzer_kontekstu.py
(+13 files in other folders)
