[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoapps"
version = "0.1.0"
description = "Pakiet z kodem z zajęć"
requires-python = ">=3.10.0"
authors = [
    { name = "Michał Dyl", email = "michal.dyl10@gmail.com" }
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["docs", "tests"]
